--- a/document.tex
+++ b/document.tex
@@ -41,7 +41,9 @@ citestyle=numeric, sorting=nyt]{biblatex}
 \renewcommand{\S}{\mathcal{S}}
 \newcommand{\V}{\mathrm{Var}}
 \newcommand{\E}{\bm{\mathrm{E}}}
+\renewcommand{\P}{\bm{\mathrm{P}}}
 \newcommand{\e}{\mathrm{e}}
+\newcommand{\set}[1]{\{#1\}}
 
 
 \begin{document}
@@ -138,8 +140,8 @@ We mostly study tall $A \in \R^{N \times n}$.
         \begin{aligned}
             s_{\max}(A) := s_1(A), \quad s_{\min}(A) := s_n(A) .
         \end{aligned}
-    \] 
-\end{defi} 
+    \]
+\end{defi}
 
 \begin{defi}
     We define the \emph{spectral norm} as
@@ -147,8 +149,8 @@ We mostly study tall $A \in \R^{N \times n}$.
         \begin{aligned}
             \|A\| = \|A\|_{\ell^2 \to \ell^2} = \sup_{x \in \S^{n-1}} \|Ax\|_2.
         \end{aligned}
-    \] 
-\end{defi} 
+    \]
+\end{defi}
 
 $s_{\max}(A) = \|A\|$ and $s_{\min}(A) = \|A^\dagger\|^{-1}$, where $A^\dagger$ is the pseudoinverse.
 
@@ -175,6 +177,126 @@ $s_{\max}(A) = \|A\|$ and $s_{\min}(A) = \|A^\dagger\|^{-1}$, where $A^\dagger$ 
 \end{defi}
 
 $X$ is compact $\iff \NN(X,\varepsilon)$ is finite.
+
+\begin{lem}[Covering number of the sphere]
+    Consider the vector space $\R^n$ equipped with the norm
+    $\||\cdot\||$ and $S = \set{x \in \R^n : \||x\|| = 1}$ be the associated
+    unit sphere. Then for every $\varepsilon > 0$ one has
+    \[
+        \begin{aligned}
+            \NN(S, \varepsilon) \le (1 + \frac{2}{\varepsilon})^n.
+        \end{aligned}
+    \]
+\end{lem}
+
+\begin{lem}
+    Let $A$ be an $N \times n$ matrix and let $\NN_\varepsilon$ be an
+    $\varepsilon$-net of $S^{n-1}$ w.r.t. the $\ell_2$-norm for some
+    $\varepsilon \in [0,1)$. Then
+    \[
+        \begin{aligned}
+            \max_{x \in \NN_\varepsilon} \|A\|_2 \le \|A\|_2 \le (1-\varepsilon)^{-1} \max_{x \in \NN_\varepsilon} \|A\|_2.
+        \end{aligned}
+    \]
+\end{lem}
+
+\begin{lem}
+    Let $A$ be a symmetric $n \times n$ matrix and let $\NN_\varepsilon$ be
+    an $\varepsilon$-net of $S^{n-1}$ w.r.t. $\|\cdot\|_2$ for some $\varepsilon \in [0,1)$.
+    Then
+    \[
+        \|A\| =
+        \sup_{x \in S^{n-1}} |\langle Ax, x\rangle|
+        \le (1-2\varepsilon)^{-1} \max_{x \in \NN_\varepsilon} | \langle Ax, x \rangle| 
+    \]
+\end{lem}
+
+\subsection{Non-asymptotic results in one dimension}
+
+Most result discussed in probability classes are asymptotic.
+Here are some non-asymptotic variants
+
+\begin{prop}[Hoeffding's inequality]
+Let $X_1, \ldots, X_n$ be a sequence of independent, real-valued random
+variables such that $\E(X_\ell) = 0$ and $|X_\ell| \le B_\ell$ a.s. for all
+$\ell = 1, \ldots, n$ for some $B_\ell > 0$. Then
+\[
+    \begin{aligned}
+        \P \left( \sum_{\ell=1}^{n} X_\ell > t \right) \le \exp \left( - \frac{t^2}{2 \sum_{\ell=1}^{n} B_\ell^2} \right).
+    \end{aligned}
+\]
+\end{prop}
+
+\begin{prop}[Bernstein type inequality]
+    Let $X_1, \ldots, X_n$ be independent mean-zero random variables
+    such that
+    \[
+        \begin{aligned}
+            \E\left( |X_\ell|^m  \right) \le m! K^{m-2} \frac{\sigma_\ell}{2}
+        \end{aligned}
+    \] for all $\ell = 1, \ldots, n$ and all $m \in \N_{n \ge 2}$,
+    for some constants $K > 0$ and $\sigma_\ell > 0$, $\ell = 1, \ldots, n$.
+    Then for all $t > 0$ one has
+    \[
+        \begin{aligned}
+            \P\left( \left|\sum_{\ell=1}^{n} X_\ell\right| > t \right)
+            \le 2 \exp(-\frac{t^2}{\sigma^2 + Kt})
+        \end{aligned}
+    \]
+    where $simga^2 := \sum_{\ell=1}^{n} \sigma_\ell^2$.
+\end{prop}
+
+\begin{lem}
+    Let $\xi = (\xi_1, \ldots, \xi_M)$ be a sequence of independent random variables with $\E \xi_j = 0$ for all $j = 1, \ldots, M$. Let $A_{jk}$, $j, k = 1, \ldots, M$ be a doubly indexed sequence of elements in a vector space $X$. Let $F: X \to \R$ be a convex function.
+    Then
+    \[
+        \begin{aligned}
+            \E F\left( \sum_{\substack{j,k = 1\\ j \ne k}}^{M} \xi_j\xi_kA_{jk} \right) \le \E F\left( 4 \sum_{j=k=1}^{M} \xi_j\xi_k'A_{jk} \right).
+        \end{aligned}
+    \]
+    Here $\xi_j'$ is an independent copy of $\xi_j$.
+\end{lem} 
+
+\begin{thm}[Tail estimates for Rademacher chaos]
+    Let $A \in \R^{M \times M}$ be a symmetric matrix with zero
+    diagonal and $\varepsilon$ a Rademacher vector.
+    Consider the Rademacher chaos
+    \[
+        \begin{aligned}
+            X = \sum_{j,k = 1}^{M} \varepsilon_j\varepsilon_k A_{jk}.
+        \end{aligned}
+    \]
+    Then
+    \[
+        \begin{aligned}
+            \P\left( |X| \ge t \right) \le \begin{cases}
+                2 \exp\left( - \frac{3t^2}{128\|A\|_F^2} \right) & \text{ if } 0 < t \le \frac{4 \|A\|_F^2}{3\|A\|} \\
+                2 \exp\left( - \frac{t}{32\|A\|} \right) & \text{ if } t > \frac{4\|A\|_F^2}{3\|A\|}
+            \end{cases} 
+            .
+        \end{aligned}
+    \]
+\end{thm}
+
+\subsection{Subgaussian random variables}
+
+\begin{lem}[Equivalence of subgaussian properties]
+    Let $X$ be a random variable. Then the following properties
+    are equivalent with parameters $K_i > 0$ differing from each other by at most an absolute constant factor.
+    More precisely, there exists an absolute constant $C$ s.t.
+    property $i$ implies property $j$ with parameter $K_j \le CK_i$
+    for any two properties $i,j = 1,2,3$.
+    \begin{enumerate}
+        \item Tails: $\P(|X|>t) \le \exp\left( 1 - \frac{t^2}{K_1^2} \right) $ for all $t \ge 0$.
+        \item Moments: $\left( \E|X|^P \right)^{\frac{1}{p}} \le K_2 \sqrt{p}$ for all $p \ge 1$.
+        \item Superexponential moment: $\E\exp(\frac{X^2}{K_3^2} \le \e$.
+    \end{enumerate}
+    Moreover, if $\E X = 0$, then properties 1-3 are also equivalent to the following one:
+    \begin{enumerate}
+        \setcounter{enumi}{3}
+        \item Moment generating function: $\E\exp(tX) \le \exp(t^2K_4^2)$ for all $t \in \R$.
+    \end{enumerate}
+\end{lem}
 
 \newpage
 
